Fixing main board display issues on smaller screens.

--- a/recipe-web/src/app/app.component.css
+++ b/recipe-web/src/app/app.component.css
@@ -70,6 +70,8 @@
   overflow: auto;
   border-right: 1px solid gray;
   padding: 10px;
+  width: 50%;
+  max-width: 50%;
 }
 
 .button-bar {
