--- a/recipe-web/src/app/components/recipe-list/recipe-list.component.css
+++ b/recipe-web/src/app/components/recipe-list/recipe-list.component.css
@@ -16,6 +16,9 @@ h4 {
   padding-left: 20px;
   /*cursor: pointer;*/
   cursor: hand;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .listelement:hover {
